# ners570Project

./: CMakeLists.txt
PostProc/: ReadMap.ipynb
input/: PARAM.in.test
src/: CMakeLists.txt  ModAdvance.f90  ModBlock.f90  ModCommunicator.f90  ModInitiator.f90  ModJobAssigner.f90  ModParamReader.f90  ModParameters.f90  ModSavePlot.f90  ModSolver.f90  main.f90  modblock.mod  modparameters.mod  test_JobAssigner  test_JobAssigner.f90
src/ModBlock/: ModBlock.f90  modblock.mod
src/ModJobAssigner/: modjobassigner.mod
src/ModSolver/: CMakeLists.txt
srcMath/: CMakeLists.txt  ModDerivative.f90  ModDeviation.f90  ModDiffusion.f90  ModInterpolate.f90  ModSpherical.f90  moddeviation.mod  modinterpolate.mod  modspherical.mod
tests/: CMakeLists.txt  test_JobAssigner.f90  test_Parameters.f90
